[package]
name = "flp-rust-macros"
version = "0.2.0"
edition = "2021"
authors = ["Shikano Hakukaze <hakukano@flp-web.org>"]
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
